<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="intro_text">Droid Desserts</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>

    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="name_label_text">Name</string>
    <string name="name_label_hint">Enter Your Name</string>
    <string name="adress_label_text">Adress:</string>
    <string name="address_label">Enter your address</string>
    <string name="phone_label_text">Phone</string>
    <string name="phone_label_hint">Enter your phone number</string>
    <string name="note_label_text">Note:</string>
    <string name="note_label">Enter note</string>
    <string name="delivery_label_text">Choose a delivery method:</string>
    <string name="delivery_sameday_option">Same day messenger service</string>
    <string name="delivery_nextday_option">Next day ground delivery</string>
    <string name="delivery_pickup_option">Pick up</string>
    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorites">Favorites</string>


    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
    <string name="title_order_activity">Order Activity</string>
    <string name="title_activity_settings">Settings</string>



    <!-- Preference Titles -->
    <string name="account_header">Account</string>
    <string name="market_header">Market</string>

    <!-- Account Preferences -->
    <string name="signature_title">Account Settings</string>
    <string name="reply_title">Market </string>

    <!-- Market Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string-array name="pref_market_titles">
        <item>United States</item>
        <item>Canada</item>
        <item>United Kingdom</item>
        <item>India</item>
        <item>Japan</item>
        <item>Other</item>
    </string-array>
    <string-array name="pref_market_values">
        <item>US</item>
        <item>CA</item>
        <item>UK</item>
        <item>IN</item>
        <item>JA0</item>
        <item>-1</item>
    </string-array>


</resources>


